Картинки с влайдере и контент главной

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					</div>
 					<!-- b-logo -->
 					<div class="b-header-slogan">
-						<p>Корпоративный сайт современной компании</p>
+						<p>Мы поможем, Вам сэкономить!!!</p>
 					</div>
 					<div class="b-header-contact">
 						<ul class="b-header-contact__list">
@@ -195,9 +195,9 @@
                 <li class="b-top-slider__item b-top-slider__item_1 clearfix">
                    <div class="l-center">
                       <div class="b-top-slider__content">
-                            <h3 class="b-top-slider__head">Адаптация под фирменный стиль</h3>
+                            <h3 class="b-top-slider__head">Зерносушилки башенного типа ЗСБП</h3>
                             <div class="b-top-slider__desc">
-                                <p>Неограниченная палитра цветов, универсальные текстуры и библиотека иконок — выбирайте любую гамму без каких-то усилий, просто изменив пару строк</p>
+                                <p>Расход топлива для снятия одного тоннопроцента влаги составляет не более 3,5 кг.</p>
                             </div>
                             <div class="b-top-slider__buttons">
                                 <button class="b-big-button">Узнать больше</button>
@@ -209,9 +209,9 @@
                 <li class="b-top-slider__item b-top-slider__item_2 clearfix">
                    <div class="l-center">
                       <div class="b-top-slider__content">
-                            <h3 class="b-top-slider__head">Адаптация под фирменный стиль</h3>
+                            <h3 class="b-top-slider__head">Твердотопливные теплогенераторы типа ГТУ</h3>
                             <div class="b-top-slider__desc">
-                                <p>Неограниченная палитра цветов, универсальные текстуры и библиотека иконок — выбирайте любую гамму без каких-то усилий, просто изменив пару строк</p>
+                                <p>Простота в обслуживании. Различные виды биотоплива. Высокое качесво. Надежность.</p>
                             </div>
                             <div class="b-top-slider__buttons">
                                 <button class="b-big-button">Узнать больше</button>
@@ -223,9 +223,9 @@
                 <li class="b-top-slider__item b-top-slider__item_3 clearfix">
                    <div class="l-center">
                       <div class="b-top-slider__content">
-                            <h3 class="b-top-slider__head">Адаптация под фирменный стиль</h3>
+                            <h3 class="b-top-slider__head">Теплообменник "воздух-воздух" типа ТВ</h3>
                             <div class="b-top-slider__desc">
-                                <p>Неограниченная палитра цветов, универсальные текстуры и библиотека иконок — выбирайте любую гамму без каких-то усилий, просто изменив пару строк</p>
+                                <p>Высокий КПД.</p>
                             </div>
                             <div class="b-top-slider__buttons">
                                 <button class="b-big-button">Узнать больше</button>
@@ -237,9 +237,9 @@
                 <li class="b-top-slider__item b-top-slider__item_4 clearfix">
                    <div class="l-center">
                       <div class="b-top-slider__content">
-                            <h3 class="b-top-slider__head">Адаптация под фирменный стиль</h3>
+                            <h3 class="b-top-slider__head">Пробоотборник электромеханический для отбора проб зерновых культур типа ПЭЗК</h3>
                             <div class="b-top-slider__desc">
-                                <p>Неограниченная палитра цветов, универсальные текстуры и библиотека иконок — выбирайте любую гамму без каких-то усилий, просто изменив пару строк</p>
+                                <p>Высокая скорость отбора проб. Отбор проб по всей толщине зернового слоя.</p>
                             </div>
                             <div class="b-top-slider__buttons">
                                 <button class="b-big-button">Узнать больше</button>
@@ -258,19 +258,19 @@
 				<ul class="b-features__list">
 					<li class="b-features__item">
 						<i class="b-features__ico">a</i>
-						<a href="/" class="b-features__link">Низкие цены и широкий ассортимент</a>
+						<a href="/" class="b-features__link">Высокое качество оборудования</a>
 					</li>
 					<li class="b-features__item">
 						<i class="b-features__ico">b</i>
-						<a href="/" class="b-features__link">Широкая сеть представительств</a>
+						<a href="/" class="b-features__link">Многолетний опыт проведения строительных и монтажных работ</a>
 					</li>
 					<li class="b-features__item">
 						<i class="b-features__ico">c</i>
-						<a href="/" class="b-features__link">Весь товар сертифицирован</a>
+						<a href="/" class="b-features__link">Передовые технологии производства</a>
 					</li>
 					<li class="b-features__item">
 						<i class="b-features__ico">d</i>
-						<a href="/" class="b-features__link">Оперативная доставка и выгрузка товара</a>
+						<a href="/" class="b-features__link">Консультации и сервисное обслуживание</a>
 					</li>
 				</ul>
 			</div>
@@ -280,49 +280,49 @@
 			<div class="l-center l-gray-border clearfix">
 				<h2 class="b-services__head">Предоставляемые услуги</h2>
 				<div class="b-services_desc">
-					<p>Компания специализируется на оказании широкого спектра услуг как для корпоративных клиентов так и для частных лиц. Профессионализм и ответственность ключевые преимущества нашей компании.</p>
+					<p>Компания ООО "НПК ТЭО" предоставляет широкий перечень услуг в сфере производства, монтажа, ремонта оборудования зернопереработки. Основные из них это:</p>
 				</div>
 				<ul class="b-services__list">
 					<li class="b-services__item b-services__item_3">
 						<img src="pic/services/img1.jpg" alt="services" class="b-services__img">
-						<a href="/" class="b-services__link">Строительство зданий</a>
+						<a href="/" class="b-services__link">Строительство ЗАВ или КЗС.</a>
 						<div class="b-services__item-desc">
-							<p>Осуществляется от имени и в интересах лиц, участвующих в деле: сторон, третьих лиц, заявителей и иных заинтересованных лиц.</p>
+							<p>Разработка проектной документации. Подготовка строительной площадки. Разработка грунта и заливка фундаментов. Строительство зданий. Монтаж оборудования.</p>
 						</div>
 					</li>
 					<li class="b-services__item b-services__item_3">
 						<img src="pic/services/img2.png" alt="services" class="b-services__img">
-						<a href="/" class="b-services__link">Ремонт оборудования</a>
+						<a href="/" class="b-services__link">Реконструкция ЗАВ или КЗС.</a>
 						<div class="b-services__item-desc">
-							<p>Частичная или полная передача работ по поддержке, обслуживанию и модернизации ИТ-инфраструктуры в руки компаний.</p>
+							<p>Замена обшивки и кровли зданий. Замена зерновпроводов. Реконструкция норий. Ремонт, реконструкция, монтаж зерноочистительного обороудования.</p>
 						</div>
 					</li>
 					<li class="b-services__item b-services__item_3">
 						<img src="pic/services/img3.jpg" alt="services" class="b-services__img">
-						<a href="/" class="b-services__link">Проектирование зданий</a>
+						<a href="/" class="b-services__link">Ремонт зерносепараторов БЦС.</a>
 						<div class="b-services__item-desc">
-							<p>Веб-разработчик знает, что впервые его. Значительно различается при оценке качества восприятия макета.</p>
+							<p>Капитальный и поточный ремонт вибросеператоров БЦС - 25, БЦС - 50, БЦС - 100. Замена решет, подшипников, изношенных деталей, реставрация корпуса, покраска.</p>
 						</div>
 					</li>
 					<li class="b-services__item b-services__item_3">
 						<img src="pic/services/img4.jpg" alt="services" class="b-services__img">
-						<a href="/" class="b-services__link">Аудит и консалтинг</a>
+						<a href="/" class="b-services__link">Строительство зерноскладов.</a>
 						<div class="b-services__item-desc">
-							<p>Все аспекты, связанные с определением, достижением и поддержанием конфиденциальности, целостности информации.</p>
+							<p>Строительство зерноскладов любых типов. Разрабока проектной документации. Составление детальных смет.</p>
 						</div>
 					</li>
 					<li class="b-services__item b-services__item_3">
 						<img src="pic/services/img5.jpg" alt="services" class="b-services__img">
-						<a href="/" class="b-services__link">Курсы английского</a>
+						<a href="/" class="b-services__link">Переоборудование зерносушилок на биотопливо.</a>
 						<div class="b-services__item-desc">
-							<p>Проверка финансово-экономической деятельности организации, проводимая аудитором.</p>
+							<p>Оснащение зерносушилок любых типов теплооборудованием, работающим на альтернативных видах топлива.</p>
 						</div>
 					</li>
 					<li class="b-services__item b-services__item_3">
 						<img src="pic/services/img6.jpg" alt="services" class="b-services__img">
-						<a href="/" class="b-services__link">Школа танцев</a>
+						<a href="/" class="b-services__link">Монтаж зерноочистительного оборудование.</a>
 						<div class="b-services__item-desc">
-							<p>Выполнение специального аудиторского задания по рассмотрению бухгалтерских и налоговых отчетов экономического субъекта.</p>
+							<p>Монтаж, наладка и ввод в эксплуатацию зерноочистительного оборудования любых производителей.</p>
 						</div>
 					</li>
 				</ul>
